WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149254
Calling a float function on x86 in WebAssembly incorrectly returns a double
https://bugs.webkit.org/show_bug.cgi?id=149254
Summary
Calling a float function on x86 in WebAssembly incorrectly returns a double
Sukolsak Sakshuwong
Reported
2015-09-17 02:08:30 PDT
In WebAssembly on x86 (32-bit), when we call a function that returns a float or a double, we use the FSTP instruction to read the return value from the FPU register stack. The FSTP instruction converts the value to single-precision or double-precision floating-point format, depending on the destination operand. Currently, we always use double as the destination. This is wrong. We should use the correct type.
Attachments
Patch
(5.67 KB, patch)
2015-09-17 02:16 PDT
,
Sukolsak Sakshuwong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sukolsak Sakshuwong
Comment 1
2015-09-17 02:16:07 PDT
Created
attachment 261380
[details]
Patch
Michael Saboff
Comment 2
2015-09-17 08:01:27 PDT
Comment on
attachment 261380
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-09-17 10:40:23 PDT
Comment on
attachment 261380
[details]
Patch Clearing flags on attachment: 261380 Committed
r189918
: <
http://trac.webkit.org/changeset/189918
>
WebKit Commit Bot
Comment 4
2015-09-17 10:40:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug